ci/manifests/muno/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: muno
  labels:
    app.kubernetes.io/name: muno
    app.kubernetes.io/part-of: noetl
