ci/manifests/muno/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muno
  namespace: muno
  labels:
    app.kubernetes.io/name: muno
    app.kubernetes.io/part-of: noetl
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: muno
  ports:
    - name: http
      port: 80
      targetPort: http
