ci/manifests/muno/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muno
  namespace: muno
  labels:
    app.kubernetes.io/name: muno
    app.kubernetes.io/part-of: noetl
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: muno
spec:
  rules:
    - host: muno.mestumre.dev
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: muno
                port:
                  number: 80
